tests/checker/ok/dispatch_in_method_body.can
Closed = Unit

Described = String

Mode = Closed + Opened

Opened = Unit

Mode => Described {
    Mode -> (
        * Closed => Described { "closed" }
        * Opened => Described { "opened" }
    )
}

Unit => Program {
    Closed()
        -> Described
        -> Print
}
